# VocalRiderPlugin

./: .gitattributes  .gitignore  CMakeLists.txt  MAGIC_RIDE_FEATURES.md  README.md  build_and_install.sh  install_plugins.sh
.github/workflows/: build.yml  extract-pace-tools.yml  test-aax-wrap.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: GainSmoother.cpp  GainSmoother.h  PeakDetector.cpp  PeakDetector.h  RMSDetector.cpp  RMSDetector.h
Source/UI/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  DualRangeKnob.cpp  DualRangeKnob.h  LevelMeter.cpp  LevelMeter.h  WaveformDisplay.cpp  WaveformDisplay.h
installer/: README.md  build_installer.sh  build_installer_lite.sh  sign_and_notarize.sh
installer/docs/: AAX_PRO_TOOLS_GUIDE.md  LOCAL_AAX_WRAPPING_GUIDE.md  WINDOWS_CODE_SIGNING_GUIDE.md
installer/windows/: magic.RIDE Lite.iss  magic.RIDE.iss
